--- a/styles/global/style.css
+++ b/styles/global/style.css
@@ -1,3 +1,15 @@
+/*
+#				-CraftedWeb Generation II-                  
+#			 __                           __ _   							   
+#		  /\ \ \___  _ __ ___  ___  ___  / _| |_ 							   
+#		 /  \/ / _ \| '_ ` _ \/ __|/ _ \| |_| __|							   
+#		/ /\  / (_) | | | | | \__ \ (_) |  _| |_ 							   
+#		\_\ \/ \___/|_| |_| |_|___/\___/|_|  \__|	- www.Nomsoftware.com -	   
+#                  The policy of Nomsoftware states: Releasing our software   
+#                  or any other files are protected. You cannot re-release    
+#                  anywhere unless you were given permission.                 
+#                  © Nomsoftware 'Nomsoft' 2011-2012. All rights reserved. 
+*/
 #overlay { margin-top: -20px; position: absolute; overflow: hidden; width: 100%; height: 99%; background-color:#000; opacity: 0.78; z-index: 98; display:none; 
   }
 
