--- a/styles/default/style.css
+++ b/styles/default/style.css
@@ -53,37 +53,44 @@ textarea { border: 1px solid #333; background-color: #181818; padding: 4px; colo
 #logo:hover { opacity: 0.85;}
 
 /* Menu */
-#menu { position: relative; float: left; width: 1000px; height: 49px; background-image: url(images/menu_bg.png); background-repeat: repeat-x;
--moz-box-shadow: 0px 0px 14px #000; -webkit-box-shadow: 0px 0px 14px #000; box-shadow: 0px 0px 14px #000; font-size: 16px; }
+#menu { position: relative; /*float: top; /*width: 900px;*/ height: 20px; background-color:#141414; /*background-image: url(images/menu_bg.png);*/ background-repeat: repeat-x;
+-moz-box-shadow: 0px 0px 10px #000; -webkit-box-shadow: 0px 0px 10px #000; box-shadow: 0px 0px 10px #000; font-size: 16px; opacity: 0.78; text-align: center;
+margin-left:auto; margin-right:auto; width:50%; }
+
+#menu.floating-menu {position:fixed; background:#141414;/*width:900px;*/ right: 10; top: 1%; }
+/*#menu.floating-menu a, div.floating-menu h3 {display:inherit;margin:0 0.5em;}*/
 
 /* Menu Links */
-#menu a { position: relative; float: left; padding-left: 30px; padding-right: 30px; padding-top: 14px; height:35px; color: #fff;  }
-#menu a:hover { background-color: #0060b1; /*background-image:url(images/menu_item_hover.png);*/ }
-#menu .current { background-color: #000000; }
+#menu.floating-menu  a{ /*position: relative; float: none;*/ padding-left: 30px; padding-right: 30px; padding-top: 10px; height:35px; color: #fff; text-align: center;}
+#menu.floating-menu a:hover { background-color: #0060b1; /*background-image:url(images/menu_item_hover.png);*/ text-align: center;}
+#menu.floating-menu a.current { background-color: #000000; text-align: center;}
 
 /* Content divs */
 #leftcontent { position: relative; float: left; width: 680px; margin-top: 30px; }
-#rightcontent { position: relative; float: left; width: 290px; margin-top: 30px;margin-left: 30px;}
-	
+#rightcontent { position: fixed; right: 0; top: 10%; width: 30em; margin-top: -2.5em;}
+#rightcontent2 { position: relative; float: left; width: 290px; margin-top: 30px;margin-left: 30px;}
+
 /* Box one classes */	
-.box_one { position: relative; width: 280px; background-color:#141414; padding: 5px; margin-bottom: 20px; 
-background-image: url(images/content_left_bg.png); background-repeat:repeat-x;border: 1px solid #343434;
+
+.box_one { position: relative; width: 140px; background-color:#141414; padding: 5px; margin-bottom: 20px; 
+/*background-image: url(images/content_left_bg.png);*/ background-repeat:repeat-x;border: 1px solid #343434;
 -moz-box-shadow: 0px 0px 14px #000; -webkit-box-shadow: 0px 0px 14px #000; box-shadow: 0px 0px 14px #000; 
-float: left;}
-.box_one_title { position: relative; width: 280px; height: 30px; background-image:url(images/box_one_title.png); background-repeat:repeat-x; color: #fff;
+float: left; opacity: 0.68;}
+
+.box_one_title { position: relative; width: 140px; height: 30px; background-image:url(images/box_one_title.png); background-repeat:repeat-x; color: #fff;
 margin-left: -5px; margin-top: -6px; padding-top: 7px; padding-left: 10px; font-size: 15px; text-shadow: 0px 1px 1px #111;}
 
-#alert { position: relative; float: left; width: 980px; height: auto; background-image:url(images/box_one_title.png); background-repeat: repeat-x;
+#alert { position: relative; float: left; /*width: 980px;*/ height: auto; background-image:url(images/box_one_title.png); background-repeat: repeat-x;
 -moz-box-shadow: 0px 0px 14px #000; -webkit-box-shadow: 0px 0px 14px #000; box-shadow: 0px 0px 14px #000; font-size: 12px; margin-top: 15px; padding-top: 7px;
-padding-left: 10px; text-shadow: 1px 1px 1px #000; color: #eee; background-color:#232323; padding-bottom: 7px; padding-right: 10px; }
+padding-left: 10px; text-shadow: 1px 1px 1px #000; color: #eee; /*background-color:#232323;*/ padding-bottom: 7px; padding-right: 10px; }
 
 /* Box two classes */
 .box_two { position: relative; float:left; width: 660px; padding: 10px; margin-bottom: 20px; 
 -moz-box-shadow: 0px 0px 14px #000; -webkit-box-shadow: 0px 0px 14px #000; box-shadow: 0px 0px 14px #000; 
-background-color: #141414; background-repeat:repeat-x; float:left;  border: 1px solid #171717;}
+background-color: #141414; background-repeat:repeat-x; float:left;  border: 1px solid #171717; opacity: 0.68;}
 .box_two_title { position: relative; width: 666px; height: 28px; background-image:url(images/box_one_title.png); 
 color: #fff; margin-left: -11px; margin-top: -11px; padding-top: 5px; padding-left: 15px; margin-bottom: 10px; 
-font-size: 18px; color: #FFD31C; }
+font-size: 18px; color: #FFD31C;}
  
 /* Footer */
 #footer { position: relative; float: left; width: 660px; text-align:center; }
@@ -96,7 +103,7 @@ font-size: 18px; color: #FFD31C; }
 .blue_text { color: #00A7F7; }
 
 /* News styling */
-.news { background-color: #252525; margin-bottom: 5px; width: 100%;}
+.news { /*background-color: #252525;*/ margin-bottom: 5px; width: 100%;}
 .news_content img { border: 1px solid #141414; -moz-box-shadow: 0px 0px 14px #000; -webkit-box-shadow: 0px 0px 14px #000; box-shadow: 0px 0px 14px #000; max-width: 180px;  
  }
 .news_comment { position: relative; float: left; width: 100%; margin: 3px; min-height: 50px; }
@@ -182,7 +189,7 @@ span.vote {color: #B79000;border: 1px solid #1D73A7;background: #85B3FE;}
 span.moreinfo:hover { opacity:0.78; }
 
 /* Account functions */
-.account_func  { position: relative; float:left; width:139px; padding-left: 40px; padding-right: 40px; color: #999; background-image:url(images/account_func_bg.png);
+.account_func  { position: relative; float:left; width:98px; padding-left: 40px; padding-right: 40px; color: #999; background-image:url(images/account_func_bg.png);
 background-repeat:repeat-x; border: 1px solid #343434; height: 32px; font-size: 15px; padding-top: 11px; cursor:pointer; margin-bottom: -1px;
 margin-left: -1px;	 }
 .account_func:hover { color: #71B100; }
@@ -221,7 +228,7 @@ padding: 6px; padding-top: 8px; }
 /* SlideShow */
 .main_view {float: left; width: 670px;
 position: relative; background-color:#1E1E1E; padding: 5px; margin-bottom: 20px; 
-background-image: url(images/content_left_bg.png); background-repeat:repeat-x;border: 1px solid #343434;
+/*background-image: url(images/content_left_bg.png);*/ background-repeat:repeat-x;border: 1px solid #343434;
 -moz-box-shadow: 0px 0px 14px #000; -webkit-box-shadow: 0px 0px 14px #000; box-shadow: 0px 0px 14px #000;  }
 /*--Window/Masking Styles--*/
 .window { height:240px;	width: 670px; overflow: hidden;  position: relative; }
@@ -240,12 +247,12 @@ z-index: 100000; text-align: center; line-height: 40px; display: none;  text-sha
 .votelink { position: relative; float: left; width: 650px; padding: 5px; margin: 4px; color: #999;text-align: left; background-color:#222; }
 
 /* Server Status */
-.srv_status_po { position: relative; width: 280px; height: 19px; border: 1px solid #151515; overflow:hidden; }
+.srv_status_po { position: relative; width: 140px; height: 19px; border: 1px solid #151515; overflow:hidden; }
 .srv_status_po_alliance { position:relative; float:left; height: 20px; 
 background-image:url(images/srv_status_alliance.png); background-repeat:no-repeat;  }
 .srv_status_po_horde { position:relative; float:left; height: 20px; 
 background-image:url(images/srv_status_horde.png); background-repeat:no-repeat;  }
-.srv_status_text {position: absolute; width: 100%; height: 20px; padding-top: 3px; display:none; text-align: center; 
+.srv_status_text {position: absolute; width: 140px; height: 20px; padding-top: 3px; display:none; text-align: center; 
 color: #ccc; display:none; text-shadow: 1px 1px 1px #111; opacity: 0.7; cursor: default;}
 
 .realm_status_text { color: #FFD31C !important;  }
