--- a/styles/default/style.css
+++ b/styles/default/style.css
@@ -13,14 +13,16 @@
 
 body { 
 	background-color: #090909; 
-	background-image: url(images/bg.jpg); 
-	background-repeat:no-repeat; 
+	background-image: url(images/bg.jpg);
 	color: #fff; 
 	font-family: 'Calibri', 'newCalibri', 'Arial'; 
 	font-size: 11px; 
-	background-position:top center; 
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: top center;
 	margin: 0; 
 	padding: 0; 
+	top: 0;
 }
 
 #wrapper { 
@@ -117,12 +119,13 @@ textarea {
 	width: 430px;
 }
 
-#logo { margin-top: 40px; }
+#logo {margin-top: 40px;}
+
 #logo:hover { opacity: 0.85;}
 
 #menu { 
 	position: relative; 
-	height: 20px; background-color:#141414; 
+	height: 20px;  
 	background-repeat: repeat-x;
 	-moz-box-shadow: 0px 0px 10px #000; 
 	-webkit-box-shadow: 0px 0px 10px #000; 
@@ -136,8 +139,7 @@ textarea {
 }
 
 #menu.floating-menu {
-	position:fixed; 
-	background:#141414;
+	position:relative;
 	top: 1%; 
 }
 
@@ -184,7 +186,7 @@ textarea {
 }
 
 .box_one { 
-	position: relative; 
+	position: fixed; 
 	width: 240px; 
 	height: 180px; 
 	background-color:#191919; 
@@ -220,8 +222,7 @@ textarea {
 	position: relative; 
 	float:left; 
 	width: 520px; 
-	padding: 10px; 
-	margin-bottom: 20px; 
+	padding: 10px;
 	-moz-box-shadow: 0px 0px 14px #000; 
 	-webkit-box-shadow: 0px 0px 14px #000; 
 	box-shadow: 0px 0px 14px #000; 
@@ -731,7 +732,7 @@ span.moreinfo:hover { opacity:0.78; }
 }
 
 .window { 
-	height:180px;	
+	height:190px;	
 	width: 530px; 
 	overflow: hidden; 
 	position: relative; 
@@ -825,7 +826,7 @@ span.moreinfo:hover { opacity:0.78; }
 
 .slider-wrapper { 
 	width: 530px; 
-	height: 180px;
+	height: 190px;
 	margin: 0 auto;
 }
 
