--- a/aasp_includes/styles/wysiwyg.css
+++ b/aasp_includes/styles/wysiwyg.css
@@ -1,11 +1,11 @@
 
-div.wysiwyg { border: 1px solid #999; padding: 5px; background: #fff url("jquery.wysiwyg.bg.png") repeat-x top; }
+div.wysiwyg { margin-top: 5px; padding: 5px;  }
 div.wysiwyg * { margin: 0; padding: 0; }
 
 div.wysiwyg ul.toolbar li.jwysiwyg-custom-command { overflow: hidden; }
 
-div.wysiwyg ul.toolbar { border-bottom: 1px solid #ccc; float: left; width: 100%; padding: 0; color: #666; }
-div.wysiwyg ul.toolbar li { list-style: none; float: left; margin: 1px 2px 3px 0;  background: rgb(240, 240, 240); -moz-user-select: none; -webkit-user-select: none; user-select: none; clear: none; padding: 0 }
+div.wysiwyg ul.toolbar { float: left; width: 100%; padding: 0; color: #666; }
+div.wysiwyg ul.toolbar li { list-style: none; float: left; margin: 1px 2px 3px 0;  -moz-user-select: none; -webkit-user-select: none; user-select: none; clear: none; padding: 0 }
 div.wysiwyg ul.toolbar li.separator { width: 1px; height: 16px; margin: 0 4px; border-left: 1px solid #ccc; }
 div.wysiwyg ul.toolbar li { text-indent: -5000px; opacity: 0.85; filter: alpha(opacity=85); display: block; width: 16px; height: 16px; background: url('jquery.wysiwyg.gif') no-repeat -64px -80px; border: 1px dotted rgb(240, 240, 240); cursor: pointer; margin: 0px; }
 div.wysiwyg ul.toolbar li.wysiwyg-button-hover, div.wysiwyg ul.toolbar li.active { opacity: 1.00; filter:alpha(opacity=100); border: 1px outset rgb(224, 224, 224); }
@@ -70,15 +70,12 @@ div.wysiwyg ul.toolbar li.cssWrap { background-position: -80px -96px; }
 
 div.wysiwyg-dialogRow { float:left; width:100%; font-size: 16px; }
 
-div.wysiwyg iframe { border: 1px solid #999; clear: left;
--moz-box-shadow    :inset 0 0 10px rgba(0, 0, 0, 0.4);
--webkit-box-shadow :inset 0 0 10px rgba(0, 0, 0, 0.4);
-box-shadow         :inset 0 0 10px rgba(0, 0, 0, 0.4);
-background-color:white; padding:0px; margin:0; display:block; width: 100%; }
+div.wysiwyg iframe { border: 1px solid #ccc; clear: left;
+background-color:white; padding-left:10px; margin:0; display:block; width: 100%; color: #666 !important; }
 
 /* dialog */
 .wysiwyg-dialog { position:fixed; top:50px; left:50px; width:450px; height:300px; background:transparent; font:14px "Helvetic Neue", Helvetica,Arial,sans-serif; }
-.wysiwyg-dialog .wysiwyg-dialog-topbar { background:#333; border:1px #111 solid; color:white; padding:10px; position:relative; }
+.wysiwyg-dialog .wysiwyg-dialog-topbar { background:#333;  color:white; padding:10px; position:relative; }
 .wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-close-wrapper .wysiwyg-dialog-close-button { color:white; text-decoration:none; display:block; padding:6px 10px; position:absolute; right:12px; top:50%; height:14px; margin-top:-12px; }
 .wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-close-wrapper a.wysiwyg-dialog-close-button:hover { background:#666; }
 .wysiwyg-dialog .wysiwyg-dialog-topbar .wysiwyg-dialog-title { font-size:20px; font-weight:bold; padding:5px; }
